<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="32dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/shape_round_corners">

    <TextView
        android:id="@+id/label_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/password_reset"
        android:textColor="@color/mpei_blue"
        android:fontFamily="@font/nunito"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <LinearLayout
        android:id="@+id/popup_container"
        app:layout_constraintTop_toBottomOf="@+id/label_reset_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/email_send_frame"
            android:orientation="vertical"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/label_reset_password">

            <TextView
                android:id="@+id/email_label"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:textSize="12sp"
                android:textColor="@color/dark_blue_text"
                android:fontFamily="@font/nunito"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input"
                app:layout_constraintTop_toBottomOf="@+id/email_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:errorTextColor="@color/error"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/resetPasswordEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:fontFamily="@font/nunito"
                    android:textColor="@color/dark_blue_text"
                    android:textColorHint="@color/dark_gray_hints"
                    android:hint="@string/email_example"
                    android:ems="15"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@null"
                    android:autofillHints="no" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_send_request"
                app:layout_constraintTop_toBottomOf="@+id/email_input"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingTop="11dp"
                android:paddingBottom="11dp"
                android:text="@string/send_request"
                android:textColor="@color/mpei_white"
                android:textSize="18sp"
                android:fontFamily="@font/nunito_semibold"
                android:textAllCaps="false"
                android:background="@drawable/ripple_blue_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ok_frame"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/label_reset_password">

            <TextView
                android:id="@+id/popup_emailSent_message"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_blue_text"
                android:textSize="14sp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/reset_password_text_blank" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/popup_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingBottom="11dp"
        android:paddingTop="11dp"
        android:text="@string/cancel"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/mpei_blue"
        android:fontFamily="@font/nunito_semibold"
        android:background="@drawable/ripple_outline_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>