<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg_blue">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragment_shop_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/fragment_shop_toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/mpei_blue"
            android:textSize="18sp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:text="@string/shop"
            android:fontFamily="@font/nunito_semibold" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/shape_list"
        android:backgroundTint="@color/mpei_white"
        app:layout_constraintTop_toBottomOf="@+id/fragment_shop_toolbar">

        <LinearLayout
            android:id="@+id/selector_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_selector_oval"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginStart="20sp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/selector_popular"
                style="@style/shop_selector_selected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/shop_popular"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/selector_all"
                style="@style/shop_selector_unselected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/shop_all"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/empty_list_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20sp"
            android:drawablePadding="7dp"
            android:textSize="14sp"
            android:fontFamily="@font/nunito"
            android:textColor="@color/mpei_blue"
            android:drawableTop="@drawable/ic_smile"
            android:text="@string/empty_shop_list"
            app:layout_constraintTop_toBottomOf="@id/selector_shop"
            app:layout_constraintLeft_toLeftOf="@id/selector_shop"
            app:layout_constraintRight_toRightOf="@id/selector_shop"/>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/selector_shop"
            app:layout_constraintLeft_toLeftOf="@id/selector_shop"
            app:layout_constraintRight_toRightOf="@id/selector_shop">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/shopViewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

</LinearLayout>